{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 9,
  "lineage": "f031b0ad-514a-e570-ee9f-404c6aded9ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "leshly_ec2_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b3c23ec8efcc2d6",
            "arn": "arn:aws:ec2:sa-east-1:405378853534:instance/i-0f1306de4033395ee",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1306de4033395ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "leshly-windows-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8e0affbc252ddb8",
            "private_dns": "ip-172-31-9-153.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.153",
            "public_dns": "ec2-15-228-192-151.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.192.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7e58a238b7919cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123032848515500000001",
              "terraform-20221123032848516500000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a6976025a14708c",
            "tags": {
              "Name": "leshly-windows-ec2-ansible0"
            },
            "tags_all": {
              "Name": "leshly-windows-ec2-ansible0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307a7588af75bca6",
              "sg-097fe9a6ced271f7a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_total_local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "leshly_ec2_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b3c23ec8efcc2d6",
            "arn": "arn:aws:ec2:sa-east-1:405378853534:instance/i-08e5cf2f7c5911bd2",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e5cf2f7c5911bd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "leshly-windows-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a2923e8fdfbb7dd",
            "private_dns": "ip-172-31-31-198.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.198",
            "public_dns": "ec2-15-228-182-100.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.182.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040a16b993437ee93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123032848515500000001",
              "terraform-20221123032848516500000002",
              "terraform-20221123032848519200000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6ec78cfc927b948",
            "tags": {
              "Name": "leshly-windows-ec2-k8s0"
            },
            "tags_all": {
              "Name": "leshly-windows-ec2-k8s0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307a7588af75bca6",
              "sg-097fe9a6ced271f7a",
              "sg-0df18867d491fcfce"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_total_local",
            "aws_security_group.sg_acesso_web_publico"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b3c23ec8efcc2d6",
            "arn": "arn:aws:ec2:sa-east-1:405378853534:instance/i-01c09be9fe4bf11cf",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c09be9fe4bf11cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "leshly-windows-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a22fcb5fdbb06840",
            "private_dns": "ip-172-31-23-76.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.76",
            "public_dns": "ec2-15-228-91-39.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.91.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdf40dc23c7a424d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123032848515500000001",
              "terraform-20221123032848516500000002",
              "terraform-20221123032848519200000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6ec78cfc927b948",
            "tags": {
              "Name": "leshly-windows-ec2-k8s1"
            },
            "tags_all": {
              "Name": "leshly-windows-ec2-k8s1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307a7588af75bca6",
              "sg-097fe9a6ced271f7a",
              "sg-0df18867d491fcfce"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_total_local",
            "aws_security_group.sg_acesso_web_publico"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b3c23ec8efcc2d6",
            "arn": "arn:aws:ec2:sa-east-1:405378853534:instance/i-071a01c5063a59c1c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071a01c5063a59c1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "leshly-windows-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00035d7e325d8267e",
            "private_dns": "ip-172-31-20-28.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.28",
            "public_dns": "ec2-18-231-140-164.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.140.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04735fdd6e0a7c193",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123032848515500000001",
              "terraform-20221123032848516500000002",
              "terraform-20221123032848519200000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6ec78cfc927b948",
            "tags": {
              "Name": "leshly-windows-ec2-k8s2"
            },
            "tags_all": {
              "Name": "leshly-windows-ec2-k8s2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307a7588af75bca6",
              "sg-097fe9a6ced271f7a",
              "sg-0df18867d491fcfce"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_total_local",
            "aws_security_group.sg_acesso_web_publico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_ssh_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:405378853534:security-group/sg-0307a7588af75bca6",
            "description": "nsg acesso ssh publico",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0307a7588af75bca6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH-mngt",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221123032848515500000001",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leshly-windows-sg-ssh-publico"
            },
            "tags_all": {
              "Name": "leshly-windows-sg-ssh-publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-099eb86cd1e65a367"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_total_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:405378853534:security-group/sg-097fe9a6ced271f7a",
            "description": "sg - security group acesso ssh somente VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097fe9a6ced271f7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221123032848516500000002",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leshly-windows-sg-ssh-local"
            },
            "tags_all": {
              "Name": "leshly-windows-sg-ssh-local"
            },
            "timeouts": null,
            "vpc_id": "vpc-099eb86cd1e65a367"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_web_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:405378853534:security-group/sg-0df18867d491fcfce",
            "description": "sg acesso web publico",
            "egress": [],
            "id": "sg-0df18867d491fcfce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "terraform-20221123032848519200000003",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leshly-windows-sg-web-publico"
            },
            "tags_all": {
              "Name": "leshly-windows-sg-web-publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-099eb86cd1e65a367"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}